# web-server

./: CMakeLists.txt  README.md  build.sh
src/: defines.h  main.c
src/containers/: rexarray.c  rexarray.h
src/core/: asserts.h  events.c  events.h  logger.c  logger.h
src/web/: commands.c  commands.h  server.c  server.h
